fix alignment with Station comp

--- a/styles/app.css
+++ b/styles/app.css
@@ -34,6 +34,10 @@ body {
   box-shadow: 0px 8px 8px -6px grey;
 }
 
+.stations {
+  margin-left: 10px;
+}
+
 input {
   outline: 0;
   border-width: 0 0 1.5px 0;
